# ClassificationOfTexts

./: Pipfile  README.md  pyproject.toml
src/: PyTorchModel.ipynb  fastaiModel.ipynb
